--- a/client/index.html
+++ b/client/index.html
@@ -20,6 +20,7 @@
         </style>
         <script src='../bower_components/peerjs/peer.js'></script>
         <script src='nocturnal.js'></script>
-        <script src='world.js'></script>
+        <script src='world/world.js'></script>
+        <script src='world/render.js'></script>
     </body>
 </html>
