Helpers ported to p2p

--- a/client/index.html
+++ b/client/index.html
@@ -22,5 +22,6 @@
         <script src='nocturnal.js'></script>
         <script src='world/world.js'></script>
         <script src='world/render.js'></script>
+        <script src='world/helpers.js'></script>
     </body>
 </html>
